# agent-native-architecture-template

./: .gitignore  AGENT.md  Agent Checklist.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: proposal-improvement.yml  question-clarification.yml
.semantic-search/: .env.example  README.md  docker-compose.yml  pyproject.toml
.semantic-search/hooks/: _auto_index.py  post-commit  post-merge
.semantic-search/scripts/: index.py  install_hook.py  install_hook.sh
.semantic-search/semantic_search/: chunker.py  config.py  hasher.py  indexer.py  mcp_server.py  store.py
.semantic-search/semantic_search/embedders/: __init__.py  local.py  voyage.py
.semantic-search/tests/: test_indexer_cli.py  test_install_hook.py  test_mcp_server.py  test_store.py  test_voyage_embedder.py
docs/adr/: 0001-outbox-pattern.md
docs/c4/: components.sample.md  container.sample.md  payment-components.md  payment-container.md
docs/contracts/: asyncapi.payments.yaml  asyncapi.sample.yaml  openapi.payment.yaml  openapi.sample.yaml
docs/contracts/schemas/: payment.yaml
docs/domain/: invariants.md  invariants.sample.md  state-transition-table.sample.md
docs/domain-visual/: payment-state-machine.mmd
docs/flows/: cancel.sample.md  finished.sample.md  flows.sample.md  payment-cancel.md  payment-finished.md  payment-flows.md
docs/ui/: payment-ui-flow.md  ui-flow.sample.md
