[project]
name = "semantic-search"
version = "0.1.0"
description = "Optional semantic search plugin for agent-native architecture template"
requires-python = ">=3.11"

dependencies = [
    "voyageai>=0.2.3",
    "qdrant-client>=1.9.0",
    "mcp>=1.0.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
index-docs    = "semantic_search.indexer:docs_app"
index-code    = "semantic_search.indexer:code_app"
search-server = "semantic_search.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_search"]
